Fix deprecation warnings.
* Class.newInstance in favor of
Class.getDeclaredConstructor.newInstance.
* Number.valueOf instead of new Number

Change-Id: Icbb8c3570cbc711e0a18f6388870c8820e06c781
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>