@@ -1,6 +1,8 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2006 IBM Corporation and others. All rights reserved. This program and the accompanying materials are made
- * available under the terms of the Eclipse Public License v1.0 which accompanies this distribution, and is available at
+ * Copyright (c) 2000, 2018 IBM Corporation and others.
+ * All rights reserved. This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License v1.0
+ * which accompanies this distribution, and is available at
  * http://www.eclipse.org/legal/epl-v10.html
  *
  * Contributors: IBM Corporation - initial API and implementation
@@ -134,7 +136,7 @@ public abstract class InternalPerformanceMeter extends PerformanceMeter {
                         while (ns++ < 40)
                             printBuffer.append(' ');
                         printBuffer
-                                .append(format.format(new Object[] { new Double(percentile.inside()),
+                                .append(format.format(new Object[] { Double.valueOf(percentile.inside()),
                                         dimension.getDisplayValue(confidenceInterval[0]),
                                         dimension.getDisplayValue(confidenceInterval[1]) }));
                     }
